apps/web/public/assets/css/layout.css
body {
    --base-hue: 220;
    --base-sat: 20%;
    --accent-hue: 150;
    --accent-sat: 90%
}

/* Override default white text on primary buttons */
.btn.primary {
    --btnFg: var(--c-base-10);
    --btnFgHover: var(--c-base-10);
}

.categorySelector {
    gap: 4px 24px;
}

.categorySelector .btn {
    position: relative;
    width: 36px;
    height: 36px;
    padding: 0px;
    --btnBg: transparent;
    --btnFg: var(--c-base-55);
    --btnBgHover: var(--c-base-40);
    --btnFgHover: var(--c-base-80);
}

.categorySelector .btn.white,
.categorySelector .btn.green,
.categorySelector .btn.pink,
.categorySelector .btn.blue,
.categorySelector .btn.yellow {
    --btnBg: var(--c-base-30);
}

.categorySelector .btn.white {
    --btnFg: white;
    --btnFgHover: white;
}

.categorySelector .btn.green {
    --btnFg: hsl(120, 80%, 70%);
    --btnFgHover: hsl(120, 80%, 80%);
}

.categorySelector .btn.pink {
    --btnFg: hsl(340, 80%, 70%);
    --btnFgHover: hsl(340, 80%, 80%);
}

.categorySelector .btn.yellow {
    --btnFg: hsl(40, 80%, 70%);
    --btnFgHover: hsl(40, 80%, 80%);
}

.categorySelector .btn.blue {
    --btnFg: hsl(210, 80%, 70%);
    --btnFgHover: hsl(210, 80%, 80%);
}

.categorySelector .btn span.icon {
    font-size: 24px;
}

.categorySelector .btn .badge {
    position: absolute;
    bottom: 2px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 10px;
    padding: 1px 2px;
    font-weight: bold;
    color: var(--c-base-10);
    background: var(--btnFg);
    border-radius: 4px;
}

.categorySelector .btn:hover .badge {
    background: var(--btnFgHover);
}

.categorySelector .separator {
    height: 16px;
    width: 1px;
    /* background: var(--c-base-60); */
    background: transparent !important;
    margin: 0px 8px;
}

.pagination .dots {
    height: 32px;
    color: var(--c-base-65);
}

.yearlyStatsContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 2px;
}

.yearlyStatsEntry,
.yearlyStatsEntryRound {
    height: auto;
    padding: 8px;
    text-align: left;
    --btnBg: var(--c-base-22);
    --btnBgHover: var(--c-base-30);
}

.yearlyStatsEntry .year {
    font-size: 14px;
    width: 40px;
    text-align: center;
}

.yearlyStatsEntry .content .values {
    gap: 2px 4px;
}

.yearlyStatsEntry .content .percent,
.yearlyStatsEntry .content .year.top {
    font-size: 16px;
    font-weight: 600;
    color: white;
    flex-grow: 1;
}

.yearlyStatsEntry .content .count {
    font-size: 14px;
    color: var(--c-base-65);
    text-align: right;
}

.yearlyStatsEntry .content .bar {
    height: 4px;
    background: var(--c-base-15);
}

.yearlyStatsEntry .content .bar .filling {
    top: 0px;
    left: 0px;
    height: 100%;
    background: var(--c-accent-60);
}

.yearlyStatsEntryRound .speedometer {
    position: relative;
    width: 36px;
    height: 36px;
    margin-bottom: -8px;
}

.yearlyStatsEntryRound .speedometer svg {
    width: 100%;
    height: 100%;
    transform: rotate(150deg);
    overflow: visible;
}

.yearlyStatsEntryRound .speedometer circle {
    fill: none;
    stroke-width: 8;
    stroke-linecap: round;
    stroke-dasharray: 283;
    transition: stroke-dashoffset 1s ease-out;
}

.yearlyStatsEntryRound .speedometer .track {
    stroke: var(--c-base-15);
    stroke-dashoffset: 94.5;
}

.yearlyStatsEntryRound .speedometer .progress {
    stroke: var(--color);
    /* 188.5 is the length of the visible arc (240 degrees) */
    stroke-dashoffset: calc(283 - (188.5 * (var(--percent) / 100)));
}

.yearlyStatsEntryRound .speedometer .value {
    position: absolute;
    width: 100%;
    top: 10px;
    text-align: center;
    font-size: 12px;
    font-weight: bold;
    color: white;
    line-height: 1;
}

.yearlyStatsEntryRound .speedometer .unit {
    position: absolute;
    width: 100%;
    bottom: 4px;
    text-align: center;
    font-size: 10px;
    font-weight: 600;
    color: white;
    line-height: 1;
}

.yearlyStatsEntryRound .year {
    font-size: 15px;
    font-weight: 600;
    color: var(--c-base-90);
}

.yearlyStatsEntryRound .progress {
    font-size: 14px;
    color: var(--c-base-65);
}

.leaderboardEntry {
    background: var(--c-base-10);
    color: inherit;
    user-select: none;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
    transition: 0.1s ease-in-out;
}

.leaderboardEntry:hover {
    background: var(--c-base-18);
    transition: none;
    text-decoration: none;
    color: inherit;
}

.leaderboardEntry.highlight {
    border: 2px solid hsl(190, 80%, 50%);
    background: linear-gradient(135deg, hsl(190, 80%, 30%), var(--c-base-10));
}

.leaderboardEntry .rank {
    min-width: 64px;
    padding: 0px 12px;
    font-size: 14px;
    text-align: center;
    font-weight: 600;
    flex-shrink: 0;
}

.leaderboardEntry .content {
    background: var(--c-base-20);
    transition: 0.1s ease-in-out;
}

.leaderboardEntry:hover .content {
    background: var(--c-base-25);
    transition: none;
}

.leaderboardEntry .profile {
    padding: 4px;
}

.leaderboardEntry .banner {
    top: 0px;
    left: 0px;
    z-index: 0;
}

.leaderboardEntry .dimming {
    top: 0px;
    left: 0px;
    z-index: 0;
    background: linear-gradient(to right, var(--c-base-10-50), var(--c-base-10));
    transition: 0.1s ease-in-out;
}

.leaderboardEntry:hover .dimming {
    filter: brightness(1.5);
    transition: none;
}

.leaderboardEntry .profile .avatar {
    width: 48px;
    height: 48px;
    background: var(--c-base-25);
}

.leaderboardEntry .profile .name {
    font-size: 18px;
    font-weight: bold;
    margin-top: -1px;
    color: white;
}

.leaderboardEntry .profile .flags>div .flag {
    height: 16px;
    flex-shrink: 0;
}

.leaderboardEntry .profile .flags>div .name {
    font-size: 14px;
    font-weight: 400;
    color: white;
}

.leaderboardEntry .statsCont {
    padding: 4px 16px;
}

.leaderboardEntry .stats {
    gap: 4px 16px;
}

.leaderboardEntry .stat .name {
    color: var(--c-base-65);
    font-size: 14px;
    font-weight: 600;
}

.leaderboardEntry .stat .value {
    color: var(--c-base-75);
    font-size: 20px;
    font-weight: 400;
}

.leaderboardEntry .stat.primary .value {
    color: white;
    font-weight: 600;
}

.leaderboardEntry .content .bar {
    height: 2px;
    background: var(--c-base-12);
    margin-top: 6px;
}

.leaderboardEntry .content .bar .filling {
    top: 0px;
    left: 0px;
    height: 100%;
}

@container (max-width: 700px) {
    .leaderboardEntry.long .content {
        flex-direction: column;
        align-items: unset;
    }

    .leaderboardEntry.long .statsCont {
        padding: 6px 12px;
    }

    .leaderboardEntry.long .stats {
        justify-content: center;
    }

    .leaderboardEntry.long .stats>div {
        align-items: center;
    }
}

@container (max-width: 500px) {

    /* Apply the styles above to short ones now */
    .leaderboardEntry.short .content {
        flex-direction: column;
        align-items: unset;
    }

    .leaderboardEntry.short .statsCont {
        padding: 6px 12px;
    }

    .leaderboardEntry.short .stats {
        justify-content: center;
    }

    .leaderboardEntry.short .stats>div {
        align-items: center;
    }

    /* Apply smallest styles to long */
    .leaderboardEntry.long {
        flex-direction: column;
        align-items: unset;
    }

    .leaderboardEntry.long .rank {
        padding: 8px;
    }

    .leaderboardEntry.long .stats>div.wide {
        flex-basis: 100%;
    }

    .leaderboardEntry.long .stats.primary .value {
        font-size: 22px;
    }

    .leaderboardEntry.long .stats .value {
        font-size: 18px;
    }
}

@container (max-width: 350px) {

    /* Apply smallest styles to short now */
    .leaderboardEntry.short {
        flex-direction: column;
        align-items: unset;
    }

    .leaderboardEntry.short .rank {
        padding: 8px;
    }

    .leaderboardEntry.short .stats>div.wide {
        flex-basis: 100%;
    }

    .leaderboardEntry.short .stats.primary .value {
        font-size: 22px;
    }

    .leaderboardEntry.short .stats .value {
        font-size: 18px;
    }
}

